kubernetes/liveness_probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness
spec:
  containers:
    - name: liveness
      image: ubuntu
      tty: true
      livenessProbe:
        exec:
          command:
            - service
            - nginx
            - status
        initialDelaySeconds: 20
        periodSeconds: 5
