kubernetes/resource_limits.yml
apiVersion: v1
kind: Pod
metadata:
  name: kplabs-pod
spec:
  containers:
    - name: kplabs-container
      image: nginx
      resources:
        requests:
          memory: "640Mi"
          cpu: "0.5"
        limits:
          memory: "12800Mi"
          cpu: "1"
