kubernetes/secret-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env
spec:
  containers:
    - name: secret-env
      image: nginx
  restartPolicy: Never
