kubernetes/service-selector.yml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-service-selector
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
